--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <span class="st-social-icon"><i class="fab fa-twitter"></i></span>
             <span class="st-icon-name">Twitter</span>
           </a>
-          <a href="https://www.linkedin.com/in/shahzad-akram-250a2b25b/" class="st-social-btn">
+          <a href="https://www.linkedin.com/in/shahzad-akram-250a2b25b/" target="_blank" class="st-social-btn">
             <span class="st-social-icon"><i class="fab fa-linkedin"></i></span>
             <span class="st-icon-name">LinkedIn</span>
           </a>
