--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <h3>Hello, I’m</h3>
           <h1>Shahzad<br>Akram
           </h1>
-          <h2>Front-End Developer</h2>
+          <h2>Front-End Developer | Ms Power BI Developer</h2>
           <div class="st-hero-btn">
             <a href="https://www.upwork.com/freelancers/~01767e390095f40540" target="_blank" rel="norefferer" class="st-btn st-style1 st-color1 st-smooth-move">Hire me</a>
           </div>
